@@ -74,6 +74,12 @@ CHANGES WITH 258 in spe:
           *now* to include a native systemd unit file instead of a legacy
           System V script to retain compatibility with future systemd releases.
 
+        * Support for systemd-repart's FactoryReset EFI variable has been
+          deprecated and support for it will be removed in v260. Use the newer,
+          more generic FactoryResetRequest variable instead, which can be
+          managed by "systemd-factory-reset request" and "systemd-factory-reset
+          complete".
+
         * To work around limitations of X11's keyboard handling systemd's
           keyboard mapping hardware database (hwdb.d/60-keyboard.hwdb) so far
           mapped the microphone mute and touchpad on/off/toggle keys to the
